add resendVerifyEmail
