# routes/api/auth/auth-routes.js
@@ -2,12 +2,13 @@ const express = require('express');
 
 const validateBody = require('../../../utils/validateBody');
 
-const { signup, verifyEmail} = require('../../../controllers/auth');
-const { registerSchema } = require('../../../db/models/users');
+const { signup, verifyEmail, resendVerifyEmail} = require('../../../controllers/auth');
+const { registerSchema, emailSchema } = require('../../../db/models/users');
 
 const router = express.Router();
 
 router.post('/signup', validateBody(registerSchema), signup);
 router.get('/verify/:verificationToken', verifyEmail);
+router.post('/verify', validateBody(emailSchema), resendVerifyEmail);
 
 module.exports = router;
